# scope

./: .gitignore  .lintignore  .travis.yml  APKINDEX.tar.gz.1  CHANGELOG-es.md  CHANGELOG.md  CODE-OF-CONDUCT-es.md  CONTRIBUTING-es.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE-es.md  GOVERNANCE.md  LICENSE  MAINTAINERS  Makefile  NOTICE  README-es.md  README.md  VENDORED_CODE-es.md  VENDORED_CODE.md  circle.yml  files-with-type  go.mod  go.sum  image-tag  lint  rebuild-image  sched  scope  scope_k8s.yaml  service-ui-kicker-test  shell-lint  supervisord.conf  tasks.yml  test  test_service-ui-kicker  weave
.circleci/: config.yml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md
app/: api_listtopology.go  api_listtopology_test.go  api_origin_test.go  api_report.go  api_report_test.go  api_topologies.go  api_topologies_test.go  api_topology.go  api_topology_test.go  benchmark_internal_test.go  collector.go  collector_test.go  control_router.go  controls.go  controls_test.go  detail_pane.go  instrumentation.go  load_container_filters.go  main.go  merger.go  merger_test.go  metric.go  metric_test.go  mock_reporter_test.go  origin_host.go  origin_host_test.go  origin_node.go  pipe_router.go  pipes.go  pipes_internal_test.go  report_lifo.go  reporter.go  reporter_test.go  resolver.go  resolver_test.go  router.go  router_test.go  scope_test.go  server_helpers.go  site_test.go  (+5 more)
backend/: Dockerfile  Dockerfile.aarch64  Dockerfile.template  Dockerfile.x86_64  build.bash  build.sh
bridge/: main.go
build-image/: Dockerfile
client/: .babelrc  (+26 more)
tools/bazel-rules/: BUILD.bazel  gogo.bzl
(+1356 files in other folders)
