load("@io_bazel_rules_go//proto:compiler.bzl", "go_proto_compiler")

go_proto_compiler(
    name = "gogo_proto",
    deps = [
        "//vendor/github.com/gogo/protobuf/gogoproto:go_default_library",
        "//vendor/github.com/gogo/protobuf/proto:go_default_library",
        "//vendor/github.com/gogo/protobuf/sortkeys:go_default_library",
    ],
    plugin = "@com_github_gogo_protobuf//protoc-gen-gogoslick",
    visibility = ["//visibility:public"],
)

go_proto_compiler(
    name = "gogo_grpc",
    deps = [
        "//vendor/github.com/gogo/protobuf/gogoproto:go_default_library",
        "//vendor/github.com/gogo/protobuf/proto:go_default_library",
        "//vendor/github.com/gogo/protobuf/sortkeys:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
    ],
    plugin = "@com_github_gogo_protobuf//protoc-gen-gogoslick",
    options = ["plugins=grpc"],
    visibility = ["//visibility:public"],
)
